--- a/.mypy.ini
+++ b/.mypy.ini
@@ -3,3 +3,5 @@ plugins = pydantic.mypy, sqlmypy
 ignore_missing_imports = True
 disallow_untyped_defs = True
 exclude = alembic/versions
+show_error_codes = True
+warn_unused_ignores = True
