--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+fastapi = "*"
+uvicorn = {extras = ["standard"], version = "*"}
+pydantic = "*"
 sqlalchemy = "*"
 alembic = "*"
-pydantic = {extras = ["dotenv"], version = "*"}
-prettyprinter = "*"
+asyncpg = "*"
 psycopg2-binary = "*"
+prettyprinter = "*"
+ujson = "*"
+sentry-sdk = "*"
+prometheus-client = "*"
+blinker = "*"
+gunicorn = "*"
+requests = "*"
 
 [dev-packages]
 sqlalchemy-stubs = "*"
@@ -18,6 +27,7 @@ black = "==20.8b1"
 mypy = "*"
 ipython = "*"
 pytest = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.9"
