--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ build:tag:
 deploy:dev: &deploy
   stage: deploy
   needs: ["build:develop"]
-  image: binkops.azurecr.io/tagbot:latest
+  image: binkcore.azurecr.io/tagbot:latest
   environment:
     name: dev
   before_script:
