BPL-81 add unitests and raise required coverage to 85%

--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,10 @@ ipython = "*"
 pytest = "*"
 pytest-cov = "*"
 xenon = "*"
+httpretty = "*"
+pytest-asyncio = "*"
+sqlalchemy-utils = "*"
+pytest-mock = "*"
 
 [requires]
 python_version = "3.9"
