BPL-81 switch httpx for requests

--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,6 @@ prometheus-client = "*"
 blinker = "*"
 gunicorn = "*"
 requests = "*"
-httpx = "*"
 rq = "*"
 redis = "*"
 tenacity = "*"
@@ -40,6 +39,7 @@ pytest-asyncio = "*"
 sqlalchemy-utils = "*"
 pytest-mock = "*"
 types-redis = "*"
+types-requests = "*"
 
 [requires]
 python_version = "3.9"
