BPL-171: capture exc on unicode error plus test

--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ azure-keyvault = "*"
 azure-storage-blob = "*"
 apscheduler = "*"
 sqlalchemy-utils = "*"
+testfixtures = "*"
 
 [dev-packages]
 sqlalchemy-stubs = "*"
