BPL-265 change logic to use retry task library

--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ azure-storage-blob = "*"
 apscheduler = "*"
 sqlalchemy-utils = "*"
 testfixtures = "*"
+retry-task-lib = {editable = true, path = "/Users/francescomilani/side_projects/retry-task-lib"}
 
 [dev-packages]
 sqlalchemy-stubs = "*"
