--- a/Pipfile
+++ b/Pipfile
@@ -32,7 +32,7 @@ azure-storage-blob = "!=12.9.0"  # version 12.9.0 has bad type annotations
 apscheduler = "*"
 sqlalchemy-utils = "*"
 testfixtures = "*"
-retry-tasks-lib = {version=">1.1.0", index="gitlab-libraries"}
+retry-tasks-lib = {version=">=1.2.0", index="gitlab-libraries"}
 
 [dev-packages]
 sqlalchemy-stubs = "*"
