--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-plugins = pydantic.mypy, sqlmypy
+plugins = pydantic.mypy, sqlalchemy.ext.mypy.plugin
 ignore_missing_imports = True
 disallow_untyped_defs = True
 exclude = alembic/versions
