BPL-353 Use fastapi-prometheus-metrics lib

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ gunicorn = "*"
 requests = "*"
 rq = "*"
 redis = "*"
+hiredis = "*"
 tenacity = "*"
 azure-identity = "*"
 azure-keyvault = "*"
@@ -32,7 +33,7 @@ azure-storage-blob = "!=12.9.0"  # version 12.9.0 has bad type annotations
 apscheduler = "*"
 testfixtures = "*"
 retry-tasks-lib = {version=">=1.9.1", index="pypi-cloud"}
-hiredis = "*"
+fastapi-prometheus-metrics = {version=">=0.1.0", index="pypi-cloud"}
 
 [dev-packages]
 flake8 = "*"
