Coverage issue fixed - remove relevant pragmas

--- a/.coveragerc
+++ b/.coveragerc
@@ -4,9 +4,10 @@ omit = *test*
         app/version.py
         app/tasks/error_handlers.py
 branch = True
+concurrency = thread
+              greenlet
 
 [report]
 fail_under = 85
 exclude_lines =
         pragma: no cover
-        pragma: coverage bug 1012
