--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ apscheduler = "*"
 testfixtures = "*"
 retry-tasks-lib = {version=">=1.10.2", index="pypi-cloud"}
 fastapi-prometheus-metrics = {version=">=0.1.0", index="pypi-cloud"}
+pyyaml = "*"
 
 [dev-packages]
 flake8 = "*"
@@ -50,6 +51,7 @@ sqlalchemy-utils = "*"
 pytest-mock = "*"
 types-redis = "*"
 types-requests = "*"
+types-pyyaml = "*"
 
 [requires]
 python_version = "3.9"
