BPL-347 add agent logic and Jigsaw agent happy path

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,6 +3,8 @@ omit = *test*
        *alembic*
         app/version.py
         app/tasks/error_handlers.py
+        app/core/reporting.py
+        app/tasks/worker.py
 branch = True
 concurrency = thread
               greenlet
