add token encryption for jigsaw agent

--- a/Pipfile
+++ b/Pipfile
@@ -36,6 +36,7 @@ retry-tasks-lib = {version=">=1.11.0", index="pypi-cloud"}
 fastapi-prometheus-metrics = {version=">=0.1.0", index="pypi-cloud"}
 pyyaml = "*"
 typer = "*"
+cryptography = "*"
 
 [dev-packages]
 flake8 = "*"
