--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ name = "pypi-cloud"
 fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 pydantic = "*"
-sqlalchemy = {extras = ["asyncio"], version = "*"}  # Workaround https://github.com/sqlalchemy/sqlalchemy/issues/7714
+sqlalchemy = {extras = ["asyncio"], version = ">=1.4.33"}  # Workaround https://github.com/sqlalchemy/sqlalchemy/issues/7714
 alembic = "*"
 asyncpg = "*"
 psycopg2-binary = "*"
@@ -32,7 +32,7 @@ azure-keyvault = "*"
 azure-storage-blob = "!=12.9.0"  # version 12.9.0 has bad type annotations
 apscheduler = "*"
 testfixtures = "*"
-retry-tasks-lib = {version=">=1.11.0", index="pypi-cloud"}
+retry-tasks-lib = {version=">=1.12.1", index="pypi-cloud"}
 fastapi-prometheus-metrics = {version=">=0.2.0", index="pypi-cloud"}
 pyyaml = "*"
 typer = "*"
