--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,7 @@ jobs:
       SQLALCHEMY_DATABASE_URI: "postgresql://postgres@127.0.0.1:5432/carina"
       REDIS_URL: redis://127.0.0.1:6379/0
       TESTING: "True"
+      PRE_LOADED_REWARD_BASE_URL: http://test.url
     services:
       postgres:
         image: postgres:latest
