--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ cryptography = "^38.0.1"
 retry-tasks-lib = {version = "^2.0.0", source = "bink-pypi"}
 cosmos-message-lib = {version = "^1.2.0", source = "bink-pypi"}
 fastapi-prometheus-metrics = {version = "^0.2.3", source = "bink-pypi"}
+future = "^0.18.3"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.10.1"
