--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ APScheduler = "^3.9.1"
 PyYAML = "^6.0"
 typer = "^0.6.1"
 cryptography = "^38.0.1"
-retry-tasks-lib = {version = "^2.0.0", source = "bink-pypi"}
+retry-tasks-lib = {version = "2.0.*", source = "bink-pypi"}
 cosmos-message-lib = {version = "^1.2.0", source = "bink-pypi"}
 fastapi-prometheus-metrics = {version = "^0.2.3", source = "bink-pypi"}
 future = "^0.18.3"
