--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ asyncpg = "^0.26.0"
 psycopg2-binary = "^2.9.3"
 prettyprinter = "^0.18.0"
 ujson = "^5.5.0"
-sentry-sdk = "~1.9.8"  # 1.10.x broke /metrics
+sentry-sdk = "^1.17.0"
 prometheus-client = "==0.12.0"  # make sure polaris.core.cli monkeypatch is still needed and functioning
 blinker = "^1.5"
 gunicorn = "^20.1.0"
