--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ priority = "explicit"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.95.0"
-uvicorn = {extras = ["standard"], version = "^0.18.3"}
-sqlalchemy = {extras = ["asyncio"], version = "^1.4.41"}
+uvicorn = { extras = ["standard"], version = "^0.18.3" }
+sqlalchemy = { extras = ["asyncio"], version = "^1.4.41" }
 alembic = "^1.8.1"
 pydantic = "^1.10.2"
 asyncpg = "^0.26.0"
@@ -27,7 +27,7 @@ psycopg2-binary = "^2.9.3"
 prettyprinter = "^0.18.0"
 ujson = "^5.5.0"
 sentry-sdk = "^1.17.0"
-prometheus-client = "==0.12.0"  # make sure polaris.core.cli monkeypatch is still needed and functioning
+prometheus-client = "==0.12.0"                                        # make sure polaris.core.cli monkeypatch is still needed and functioning
 blinker = "^1.5"
 gunicorn = "^20.1.0"
 requests = "^2.28.1"
@@ -37,7 +37,7 @@ hiredis = "^1.0.2"
 tenacity = "^8.0.1"
 azure-identity = "^1.10.0"
 azure-keyvault = "^4.2.0"
-azure-storage-blob = "==12.8.1"   # version 12.9.0 & 12.10.0 have bad type annotations
+azure-storage-blob = "==12.8.1"                                       # version 12.9.0 & 12.10.0 have bad type annotations
 APScheduler = "^3.9.1"
 PyYAML = "^6.0"
 typer = "^0.6.1"
@@ -90,51 +90,48 @@ disallow_untyped_defs = true
 show_error_codes = true
 warn_unused_ignores = true
 ignore_missing_imports = true
-plugins = [
-    "pydantic.mypy",
-    "sqlalchemy.ext.mypy.plugin",
-]
+plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
 
 [tool.ruff]
 line-length = 120
 show-source = true
 target-version = "py310"
 select = [
-    "F",    # Pyflakes (F)
+    "F",   # Pyflakes (F)
     "E",
-    "W",    # pycodestyle (E, W)
-    "C90",  # mccabe (C90)
+    "W",   # pycodestyle (E, W)
+    "C90", # mccabe (C90)
     # isort (I)
     # pydocstyle (D)
-    "UP",   # pyupgrade (UP)
-    "N",    # pep8-naming (N)
-    "YTT",  # flake8-2020 (YTT)
-    "ANN",  # flake8-annotations (ANN)
-    "S",    # flake8-bandit (S)
-    "BLE",  # flake8-blind-except (BLE)
+    "UP",  # pyupgrade (UP)
+    "N",   # pep8-naming (N)
+    "YTT", # flake8-2020 (YTT)
+    "ANN", # flake8-annotations (ANN)
+    "S",   # flake8-bandit (S)
+    "BLE", # flake8-blind-except (BLE)
     # flake8-boolean-trap (FBT)
-    "B",    # flake8-bugbear (B)
-    "A",    # flake8-builtins (A)
-    "C4",   # flake8-comprehensions (C4)
-    "T10",  # flake8-debugger (T10)
+    "B",   # flake8-bugbear (B)
+    "A",   # flake8-builtins (A)
+    "C4",  # flake8-comprehensions (C4)
+    "T10", # flake8-debugger (T10)
     # flake8-errmsg (EM)
-    "ICN",  # flake8-import-conventions (ICN)
-    "T20",  # flake8-print (T20)
+    "ICN", # flake8-import-conventions (ICN)
+    "T20", # flake8-print (T20)
     # "PT",   # flake8-pytest-style (PT)
-    "Q",    # flake8-quotes (Q)
+    "Q", # flake8-quotes (Q)
     # flake8-return (RET)
-    "SIM",  # flake8-simplify (SIM)
-    "TID",  # flake8-tidy-imports (TID)
-    "ARG",  # flake8-unused-arguments (ARG)
-    "DTZ",  # flake8-datetimez (DTZ)
-    "ERA",  # eradicate (ERA) until we can remove commented out code this has to stay deactivated
+    "SIM", # flake8-simplify (SIM)
+    "TID", # flake8-tidy-imports (TID)
+    "ARG", # flake8-unused-arguments (ARG)
+    "DTZ", # flake8-datetimez (DTZ)
+    "ERA", # eradicate (ERA) until we can remove commented out code this has to stay deactivated
     # pandas-vet (PD)
     # pygrep-hooks (PGH)
     "PLC",
     "PLE",
     "PLR",
-    "PLW",  # Pylint (PLC, PLE, PLR, PLW)
-    "RUF",  # Ruff-specific rules (RUF)
+    "PLW", # Pylint (PLC, PLE, PLR, PLW)
+    "RUF", # Ruff-specific rules (RUF)
 ]
 ignore = [
     "ANN101",
@@ -143,17 +140,26 @@ ignore = [
     # disables function call in function parameter error
     # arg = typer.Option(..) would be flagged
     "B008",
-    "ARG001", # Unused function argument
-    "BLE001", # Do not catch blind exception: `Exception`
-    "N818", # Exception name should be named with an Error suffix
+    "ARG001",  # Unused function argument
+    "BLE001",  # Do not catch blind exception: `Exception`
+    "N818",    # Exception name should be named with an Error suffix
     "PLR2004", # Magic value used in comparison
-    "RUF006", # Store a reference to the return value of `asyncio.create_task` we do this in cosmos
+    "RUF006",  # Store a reference to the return value of `asyncio.create_task` we do this in cosmos
 ]
 
 [tool.ruff.per-file-ignores]
+"carina/alembic/*" = ["N806", "W291", "F401", "E501", "ERA001"]
 "__init__.py" = ["F401", "F403"]
-"tests/*" = ["S101", "S105", "S311", "PLR2004", "ARG001", "PLR0913", "PLR0915", "ARG002"]
-
+"tests/*" = [
+    "S101",
+    "S105",
+    "S311",
+    "PLR2004",
+    "ARG001",
+    "PLR0913",
+    "PLR0915",
+    "ARG002",
+]
 [tool.poetry-dynamic-versioning]
 enable = true
 vcs = "git"
@@ -168,6 +174,6 @@ build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.refurb]
 ignore = [
-    "FURB184",  # some chaining suggestions don't make sense
+    "FURB184", # some chaining suggestions don't make sense
     "FURB111", # conflicts with sync and async run query
 ]
