--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,8 @@ registries:
   python-azure:
     url: https://pkgs.dev.azure.com/binkhq/_packaging/binkhq/pypi/simple
     type: python-index
-    token: ":${{ secrets.AZURE_DEVOPS_PAT }}"
+    username: cpressland@bink.com
+    password: ${{ secrets.AZURE_DEVOPS_PAT }}
     replaces-base: true
 updates:
   - package-ecosystem: "pip"
