Assign Renovate to Developers

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,9 @@
   "extends": [
     "config:recommended"
   ],
+  "reviewers": [
+    "team:developers"
+  ],
   "hostRules": [
     {
       "hostType": "pypi",
